--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -7,9 +7,9 @@
     @apply py-2 px-4 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
   }
   .blur-div {
-    @apply fixed inset-0  bg-black bg-opacity-40 pointer-events-auto;
+    @apply fixed inset-0  bg-white bg-opacity-40 pointer-events-auto;
     transition: opacity 0.15s linear;
-    backdrop-filter: blur(6px);
+    backdrop-filter: blur(4px);
   }
   .focus-div {
     color: red;
