--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -1,24 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
-  }
-  .blur-div {
-    @apply fixed inset-0  bg-white bg-opacity-40 pointer-events-auto;
-    transition: opacity 0.15s linear;
-    backdrop-filter: blur(4px);
-  }
-  .focus-div {
-    color: red;
-  }
-  .focus-div:hover {
-    color: blue;
-  }
-}
-
 /* Variables */
 :root {
   --black: #000000;
@@ -49,3 +28,5 @@
   --pageBG-hsl: 0, 0%, 0%;
   --pageText-hsl: 2, 92%, 53%;
 }
+
+@import "_base";
