dropdown opacity 세팅

--- a/client/src/styles/_base.css
+++ b/client/src/styles/_base.css
@@ -22,4 +22,10 @@
   .drop-down {
     @apply absolute z-20 inset-x-0 bg-pageBG;
   }
+  .drop-npEvent {
+    @apply opacity-0 pointer-events-none;
+  }
+  .drop-downEvent {
+    @apply opacity-100 pointer-events-auto;
+  }
 }
