--- a/client/src/components/molecules/Stopwatch.module.css
+++ b/client/src/components/molecules/Stopwatch.module.css
@@ -30,7 +30,7 @@
   margin: 0 1rem;
   border-radius: 10px;
 
-  color: #333;
+  color: var(--pageText);
   cursor: pointer;
   transition: background-color 0.4s ease-in-out, color 0.4s ease-in-out;
 }
