--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -4,7 +4,7 @@
 :root {
   --black: #000000;
   --white: #ffffff;
-
+  font-family: var(--inter-font);
   --black-hsl: 0, 0%, 0%;
   --white-hsl: 0, 0%, 100%;
 
