--- a/client/src/styles/_base.css
+++ b/client/src/styles/_base.css
@@ -48,4 +48,10 @@
   .mainDiv {
     height: 90vh;
   }
+  .img_motion {
+    position: absolute;
+  }
+  .container_div {
+    height: 0vh;
+  }
 }
