--- a/client/src/components/molecules/mainCarousel.module.css
+++ b/client/src/components/molecules/mainCarousel.module.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .next,
@@ -16,7 +17,7 @@
   height: 40px;
   display: flex;
   justify-content: center;
-
+  color: black;
   user-select: none;
   cursor: pointer;
   font-weight: bold;
