--- a/client/src/styles/_base.css
+++ b/client/src/styles/_base.css
@@ -18,6 +18,7 @@
   }
   .headerStyle {
     @apply items-center bg-pageBG flex justify-between mx-auto p-[2px] sm:py-6;
+    height: 45px;
   }
 
   .drop-npEvent {
@@ -39,16 +40,67 @@
     bottom: -8px;
     left: 0;
     right: 0;
-    height: 1px;
+    height: 3px;
     background: var(--pageText);
   }
   .quizQuestion {
-    height: 100px;
+    min-height: 200px;
+
+    width: 600px;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    padding: 20px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    background-color: #fff;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  @media (max-width: 640px) {
+    .quizQuestion {
+      width: auto;
+      word-wrap: break-word;
+    }
   }
   .mainDiv {
     height: 90vh;
   }
   .img_motion {
     position: absolute;
+  }
+  .output-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    max-width: 500px;
+    height: 200px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    color: black;
+    font-size: 16px;
+    text-align: center;
+    padding: 20px;
+    margin: 10px auto;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  }
+
+  .answer {
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+
+  .user-input {
+    font-size: 18px;
+    padding: 10px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    margin-bottom: 10px;
   }
 }
