--- a/client/src/components/molecules/Stopwatch.module.css
+++ b/client/src/components/molecules/Stopwatch.module.css
@@ -1,8 +1,8 @@
 .start {
   color: white;
-  background-color: green;
+  background-color: var(--button);
   font-size: 20px;
-  padding: 10px 20px;
+  padding: 5px 10px;
   border-radius: 5px;
   cursor: pointer;
 }
@@ -11,7 +11,7 @@
   color: white;
   background-color: red;
   font-size: 20px;
-  padding: 10px 20px;
+  padding: 5px 10px;
   border-radius: 5px;
   cursor: pointer;
 }
@@ -35,7 +35,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
+  margin-bottom: 1rem;
   font-size: 2rem;
 }
 
@@ -47,7 +47,4 @@
   color: var(--pageText);
   cursor: pointer;
   transition: background-color 0.4s ease-in-out, color 0.4s ease-in-out;
-}
-
-.btn:hover {
 }
