--- a/client/src/styles/_base.css
+++ b/client/src/styles/_base.css
@@ -30,6 +30,10 @@
   .drop-BG {
     @apply hidden sm:block;
   }
+  .form-radio {
+    @apply h-5 w-5;
+  }
+
   .backdrop {
     will-change: transform;
 
@@ -52,9 +56,9 @@
     text-align: center;
     padding: 20px;
     border: 2px solid #ccc;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    background-color: #fff;
+    border-radius: 50px;
+    box-shadow: 2px 2px 5px gray;
+    background: var(--block);
     margin-top: 20px;
     margin-bottom: 20px;
   }
@@ -79,15 +83,15 @@
     max-width: 500px;
     height: 200px;
     border: 1px solid black;
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    color: black;
+    border-radius: 50px;
+    background: var(--block);
+    border: 2px solid #ccc;
     font-size: 16px;
-    text-align: center;
+    font-weight: bold;
     padding: 20px;
     margin: 10px auto;
     border-radius: 20px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 2px 5px gray;
   }
 
   .answer {
@@ -102,11 +106,13 @@
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     margin-bottom: 10px;
+    display: flex;
   }
+
   button[type="submit"] {
-    background-color: #4caf50;
+    background-color: var(--button);
     border: none;
-    color: white;
+    font-weight: bold;
     padding: 10px 20px;
     text-align: center;
     text-decoration: none;
@@ -117,6 +123,23 @@
     transition: background-color 0.3s ease;
   }
   button[type="submit"]:hover {
+    background-color: #3e8e41;
+  }
+
+  button[type="button"] {
+    background-color: var(--button);
+    border: none;
+    font-weight: bold;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  button[type="button"]:hover {
     background-color: #3e8e41;
   }
 }
