--- a/client/src/components/molecules/mainCarousel.module.css
+++ b/client/src/components/molecules/mainCarousel.module.css
@@ -4,9 +4,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
+
+  margin-top: 50px;
+  max-width: 100%;
+  height: auto;
+  min-height: 400px;
+  object-fit: contain;
+  width: 80%;
 }
 
+.img_motion {
+  position: absolute;
+}
 .next,
 .prev {
   top: 50%;
