blurdiv 수정, 모바일 드롭다운 추가

--- a/client/src/styles/_base.css
+++ b/client/src/styles/_base.css
@@ -126,6 +126,9 @@
     margin-bottom: 10px;
     display: flex;
   }
+  .menu-mobile {
+    @apply fixed top-0 left-0 w-full max-w-[420px] z-30 h-screen flex flex-col bg-pageBG text-pageText;
+  }
 
   button[type='submit'] {
     background-color: var(--button);
